# ls

./: CMakeLists.txt  Makefile  README.md  author
includes/: flags.h  ft_errors.h  ft_ls.h  ls.h  nodes.h  print.h  print_col.h  print_line.h  srcs.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_iswspace.c  ft_itoa.c  ft_itoabase.c  ft_lennbr.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memchrat.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrealloc.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbr_ll.c  ft_putstr.c  (+36 more)
src/: ft_add_node.c  ft_all_print.c  ft_get_flags.c  ft_get_node.c  ft_know_max.c  ft_new_node.c  ft_print_acl.c  ft_print_filename.c  ft_print_filetype.c  ft_print_flag_i.c  ft_print_l_or_not.c  ft_print_major_minor.c  ft_print_name_group.c  ft_print_nlink.c  ft_print_rights.c  ft_print_simlink.c  ft_print_size.c  ft_print_time.c  ft_srcs_list.c  ls_strcmp.c  main.c  parse_args.c  print_args.c
src/errors/: ft_eacces.c  ft_enoent.c  ft_enotdir.c  ft_handle_error.c  ft_init_error.c
src/flags/: del_flags.c  flags_error.c  get_flag.c  init_flags.c  parse_flags.c
src/nodes/: cmp_nodes.c  del_node.c  get_dir_node.c  get_file_node.c  get_node.c
src/print/: init_dir_path.c  print_col.c  print_col_right.c  print_dir_node.c  print_error.c  print_file_node.c  print_name.c  print_name_endl.c  print_node.c  print_srcs.c
src/print/col/: init_col_attr.c  print_src.c  print_srcs_col.c  walk_srcs_col.c  walk_srcs_row.c
src/print/line/: get_human_readable.c  get_max_values.c  print._gid.c  print_date.c  print_gid.c  print_link.c  print_mode.c  print_nlink.c  print_size.c  print_srcs_line.c  print_total.c  print_uid.c
src/srcs/: cmp_srcs.c  del_src.c  get_srcs.c  init_src.c
